--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://agendauser:V1Q4UAPCU6WEAij5@agenda.pwcb1.mongodb.net/test
-spring.data.mongodb.database=agenda
+spring.data.mongodb.uri=URL MONGODB
+spring.data.mongodb.database=DATABASE MONGODB
