--- a/pom.xml
+++ b/pom.xml
@@ -32,19 +32,43 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 			
 		<dependency>
         	<groupId>org.mapstruct</groupId>
         	<artifactId>mapstruct</artifactId>
         	<version>1.4.2.Final</version>
-    </dependency>   
+    	</dependency> 
+    	
+    	<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>  
 
-		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-test</artifactId>
+		    <exclusions>
+		      <exclusion>
+		        <groupId>junit</groupId>
+		        <artifactId>junit</artifactId>
+		      </exclusion>
+		    </exclusions>
+  		</dependency>
+ 
+	  <dependency>
+	    <groupId>org.junit.jupiter</groupId>
+	    <artifactId>junit-jupiter-api</artifactId>
+	  </dependency>
+ 
+	  <dependency>
+	    <groupId>org.junit.jupiter</groupId>
+	    <artifactId>junit-jupiter-engine</artifactId>
+	  </dependency>
+	 
+	 <dependency>
+     	<groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-core</artifactId>
+     </dependency>
 	</dependencies>
 
 	<build>
@@ -57,7 +81,6 @@
 			<plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.5.1</version>
             <configuration>
                 <source>8</source> <!-- depending on your project. In this example, Java 11 is used -->
                 <target>8</target> <!-- depending on your project. In this example, Java 11 is used -->
